--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc-watch --onSuccess \"nodemon dist/index.js\" ",
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\" ",
     "postinstall": "prisma generate"
   },
   "keywords": [],
